# metal-bulletin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: collect.yml  news.yml  pages.yml  probe-komis.yml
builder/: build.py  events_build.py  komis_validate.py  lme_backfill.py  news_build.py  news_manifest.py  news_reclassify.py  sb_build.py
data/: exchange.bok.json  exchange.parquet  index.json  manifest.json
data/daily/: 2015-10-01.json  2015-10-02.json  2015-10-05.json  2015-10-06.json  2015-10-07.json  2015-10-08.json  2015-10-09.json  2015-10-12.json  2015-10-13.json  2015-10-14.json  2015-10-15.json  2015-10-16.json  2015-10-19.json  2015-10-20.json  2015-10-21.json  2015-10-22.json  2015-10-23.json  2015-10-26.json  2015-10-27.json  2015-10-28.json  2015-10-30.json  2015-11-02.json  2015-11-03.json  2015-11-04.json  2015-11-05.json  2015-11-06.json  2015-11-09.json  2015-11-10.json  2015-11-11.json  2015-11-12.json  2015-11-13.json  2015-11-16.json  2015-11-17.json  2015-11-18.json  2015-11-19.json  2015-11-20.json  (+2590 more)
docs/: architecture.md
exchange/: fetch_krw.py
metal_bulletin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parser/: page1.py  page2.py  page3.py  parse.py
research/: lme-api-research.md
scraper/: download.py  komis.py  sb.py
scripts/: lambda_komis_test.py  lambda_pps_test.py  migrate_rename_lme_settle.py  migrate_swap_mavg.py  news_reclassify.py  purge_old_news_sources.py
site/: app.js  config.js  index.html  news.js  smoke.mjs  style.css
summarizer/: client.py  prompt.py  run.py
tests/: test_builder.py  test_exchange.py  test_komis.py  test_parser.py  test_post_migration_smoke.py  test_sb.py  test_scraper.py
(+287 files in other folders)
